# opencv_cpp_starter

./: .gitignore  CMakeLists.txt  main.cpp
sample_images/: img_1.jfif
